# CICD-project

./: pyproject.toml
.github/workflows/: ci.yml
src/myproject/: __main__.py  cli.py
tests/: test_cli.py
